# coatopt

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md  available_options.md  basic_usage.md  default_config.md
examples/: example_20_layer_hppo_materials.json  example_20layer_hppo_config.ini  materials.json  test_plots.ipynb
experiments/: config_genetic.ini  config_sb3_discrete.ini  config_sb3_discrete_lstm.ini  simple_config.ini
scripts/: plot_moo_demo.py
src/coatopt/: compare_outputs.py  compare_pareto_fronts.py  factories.py  generate_condor_dag.py  run.py  run_experiment.py  run_genetic.py  run_genetic_multiopt.py  run_mcmc.py  run_multiple.py  run_training.py  sweep.py  train_coating_hppo.py  train_dqn.py  train_genetic_multiopt.py  train_hppo.py  train_hppo_oml.py  train_mcts_pareto.py  train_pc_hppo_oml.py  train_pc_hppo_oml_pareto.py  train_pdqn2.py
src/coatopt/algorithms/: action_utils.py  config.py  dqn.py  genetic_algorithm.py  hppo.py  hppo_oml.py  hppo_trainer.py  hyper_pc_hppo_oml.py  pc_hppo_agent.py  pc_hppo_oml.py  pc_hppo_oml_original.py  pdqn.py  plotting_utils.py  policy_nets.py  pre_networks.py  replay_buffer.py  train_genetic_simple.py  train_hppo_hybrid.py  train_hppo_multiagent.py  train_hppo_preference.py  train_hppo_sequential.py  train_hppo_simple.py  train_morl_discrete.py  train_morl_simple.py  train_sac_hybrid.py  train_sac_multiagent.py  train_sb3_continuous.py  train_sb3_discrete.py  train_sb3_discrete_dqn.py  train_sb3_discrete_lstm.py
src/coatopt/config/: __init__.py  default.ini  load_config.py  materials.json  materials2.json  materials_noair.json  structured_config.py
src/coatopt/environments/: EFI_tmm.py  YAM_CoatingBrownian.py  YAM_CoatingBrownian_2.py  __init__.py  coating_reward_function.py  coating_utils.py  environment.py  genetic_environment.py  hppo_environment.py  layer_editing_environment.py  multi_material_all.py  multiobjective_environment.py  state.py  thermal_noise_environment.py  thermal_noise_environment_discrete.py  thermal_noise_environment_genetic.py  thermal_noise_environment_genetic_mcmc.py  thermal_noise_environment_mcmc.py  thermal_noise_environment_pareto.py
src/coatopt/networks/: genetic_algorithm.py  hppo.py  policy_nets.py  pre_networks.py
src/coatopt/tools/: genetic_tools.py  plotting.py
src/coatopt/training/: checkpoint_manager.py  trainer.py
src/coatopt/utils/: configs.py  (+16 more)
src/coatopt_cli/: __init__.py  train.py  train_genetic_multiopt.py  train_layer_edit.py
src/coatopt_ui/: TRAINING_UI_README.md  launch_ui.py  training_ui.py
tests/: test_base_environment.py  test_environment.py  test_mixture_of_experts.py  test_pareto_tracker.py  test_plotting_manager.py  test_preference_constraints.py  test_reward_normalisation.py  test_reward_system.py  test_reward_system_comprehensive.py  test_weight_cycling.py
(+52 files in other folders)
