[project]
name = "coatopt"
description = "optimise coating layers"
version = "0.0.2"
readme = "README.rst"
authors = [
    { name = "Joseph Bayley", email = "joseph.bayley@glasgow.ac.uk" }
]
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "matplotlib",
    "tmm",
    "pandas",
    "tmm_fast",
    "numba"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["coatopt", "coatopt_ui", "coatopt_cli"] 
exclude = ["docs*"]
namespaces = false

[project.optional-dependencies]
dev = [
    "tox",
    "pre-commit",
    "bump2version"
]

[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project.scripts]
coatopt-ui = "coatopt_ui.launch_ui:main"
coatopt-train = "coatopt_cli.train:main"
coatopt-train-edit = "coatopt_cli.train_layer_edit:main"